rhai/codegen/ui_tests/rhai_fn_setter_multiple.stderr
error: conflicting setter
  --> $DIR/rhai_fn_setter_multiple.rs:12:42
   |
12 |     #[rhai_fn(name = "foo", set = "foo", set = "bar")]
   |                                          ^^^^^^^^^^^

error[E0433]: failed to resolve: use of undeclared crate or module `test_module`
  --> $DIR/rhai_fn_setter_multiple.rs:23:8
   |
23 |     if test_module::test_fn(n) {
   |        ^^^^^^^^^^^ use of undeclared crate or module `test_module`
